[tool.poetry]
name = "diffusers-scheduling-perf"
version = "0.1.0"
description = ""
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "diffusers_scheduling_perf", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
torch = "^2.3.0"
diffusers = "^0.27.2"
tqdm = "^4.66.4"
transformers = "^4.40.2"
accelerate = "^0.30.1"
py-spy = "^0.3.14"

[tool.poetry.scripts]
main = "diffusers_scheduling_perf.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
